# TUHH_FaV

./: .gitignore  .gitignore_BACKUP_7429  .gitignore_BASE_7429  .gitignore_LOCAL_7429  .gitignore_REMOTE_7429  2020-12-09-15-09-38.bag  2020-12-09-15-11-08.bag  2020-12-09-15-11-50.bag  2020-12-09-15-47-41.bag  2020-12-09-15-59-56.bag  README.md
.catkin_tools/profiles/default/: devel_collisions.txt
.devcontainer/: Dockerfile  devcontainer.json  entrypoint.sh
devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
devel/.private/awesome_package/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/.private/beginner_tutorials/: .catkin  local_setup.sh  setup.sh
devel/.private/bluerov_sim/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/.private/catkin_tools_prebuild/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/.private/controlelr_main/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/.private/controller/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/.private/controller_main/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
devel/.private/depth_controller/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/.private/depth_stabilizer/: .catkin  .rosinstall  setup.sh
devel/.private/dynamic_tutorials/: .catkin  local_setup.sh
devel/.private/fav_projects/: .catkin  .rosinstall  local_setup.sh
devel/.private/libmavconn/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/.private/localization/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/.private/mavros/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/.private/mavros_extras/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/.private/mavros_msgs/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/.private/pid/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/.private/range_sensor/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/.private/test_mavros/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/include/bluerov_sim/: ActuatorCommands.h
documents/: Poster_Group4.pptx
logs/bluerov_sim/: build.symlink.000.log.stderr
logs/controller/: build.check.003.log.stderr  build.check.006.log.stderr  build.cmake.000.log.stderr  build.cmake.003.log.stderr  build.make.004.log.stderr
logs/controller_main/: build.check.002.log.stderr  build.check.016.log.stderr  build.check.021.log.stderr  build.check.022.log.stderr  build.check.023.log.stderr  build.make.017.log.stderr  build.make.018.log.stderr  build.symlink.000.log.stderr  build.symlink.015.log.stderr
logs/depth_controller/: build.check.015.log.stderr  build.make.017.log.stderr  build.symlink.000.log.stderr  build.symlink.003.log.stderr  build.symlink.015.log.stderr
logs/dynamic_tutorials/: build.cmake.000.log.stderr
logs/fav_projects/: build.check.004.log.stderr  build.symlink.000.log.stderr
logs/localization/: build.cmake.000.log.stderr  build.symlink.002.log.stderr
src/: rqt_multiplot_plugin  tolgatest.txt
src/PathPlanning/: CMakeLists.txt  package.xml
src/Plotting/: CHECK_TOPICS.xml  rqt_multiplot.xml  rqt_multiplot2.xml  rqt_multiplot3.xml  rqt_multiplot_CONTROLLER.xml  rqt_multiplot_LOCALIZATION.xml  rqt_multiplot_SESNORS.xml
src/controller/: CMakeLists.txt  package.xml
src/controller/launch/: 01_test_PP_without_detection.launch  02_test_detection.launch  03_test_PP_with_detection.launch  04_test_PP_with_Face_detection.launch  controller.launch  for_experiment copy.launch  for_experiment.launch  for_simulation.launch  gazebo.launch
src/controller/models/partition_wall_for_tank_1/: model.config  model.sdf
src/controller/models/partition_wall_for_tank_2/: model.config  model.sdf
src/controller/models/partition_wall_for_tank_3/: model.config  model.sdf
src/controller/models/uuv_bluerov2_heavy/: uuv_bluerov2_heavy.sdf
src/controller/msg/: currentPose.msg
src/controller/node/: checkpoint_node.py  controller_node.py  main.py  multiSetpoint_generator.py  orientation_adjustment_for_PID.py
src/controller/plugins/: gazebo_pressure_plugin.cpp
src/controller_main/: CMakeLists.txt  package.xml
src/depth_controller/: CMakeLists.txt  package.xml
src/face_detection/: CMakeLists.txt  package.xml
src/localization/: CMakeLists.txt  main.py  package.xml  package.xml~HEAD
src/localization/launch/: launch_localization.launch
src/localization/msg/: RangesForPlotting.msg
src/localization/nodes/: extended_kalman_filter copy.py  extended_kalman_filter.py  kalman_filter.py  kalman_filter_LSE.py  least_square_error.py  localization_error.py  localization_estimate.py  position_estimator.py  range_averager.py  test_rot.py  tf_camera_to_baselink.py
src/object_detection/: CMakeLists.txt  package.xml
src/path_planning/: CMakeLists.txt  package.xml
src/path_planning/launch/: object_detection.launch  path_planning.launch
src/path_planning/msg/: PathCoordinates.msg
src/path_planning/nodes/: 2D_planning_temp.py  PathPlanning.py  PythonRobotics_Astar.py  path_planning.py  path_planning_node.py  setpoint_publisher.py
src/rosbag_scripts/: controller_rosbag  localization_rosbag
src/sensor_processor/: CMakeLists.txt  package.xml
src/sensor_processor/launch/: sensor_processor.launch
src/sensor_processor/nodes/: depth_calculator.py  pose_reader.py  range_viewer.py
(+1096 files in other folders)
