<?xml version="1.0"?>
<package format="2">
  <name>sensor_processor</name>
  <version>0.0.0</version>
  <description>The sensor_processor package</description>

  <maintainer email="vscode@todo.todo">vscode</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>std_msgs</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
